--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".RatingActivity">
 
     <LinearLayout
@@ -20,7 +21,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:viewBindingIgnore="true">
 
         <TextView
             android:id="@+id/wakeup1"
@@ -39,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
+            android:background="#FFFFFF"
             android:fontFamily="monospace"
             android:text="@string/wakeupMSG2"
             android:textAlignment="center"
@@ -46,56 +49,39 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@android:style/Widget.DeviceDefault.Light.RatingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="58dp"
+            android:layout_gravity="center"
+            android:indeterminate="false"
+            android:isIndicator="false"
+            android:max="5"
+            android:numStars="5"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:progressDrawable="@drawable/rating"
+            android:rating="0"
+            android:scaleType="fitCenter"
+            android:stepSize="0.5" />
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="76dp"
             android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <ImageButton
-                android:id="@+id/star1"
-                android:layout_width="@dimen/star_width"
-                android:layout_height="match_parent"
-                android:layout_margin="-10px"
-                android:contentDescription="@string/emptystar"
-                android:padding="-1dp"
-                android:scaleType="fitCenter"
-                android:background="#00ff"
-                app:srcCompat="@drawable/empty_star" />
-
-            <ImageButton
-                android:id="@+id/star2"
-                android:layout_width="@dimen/star_width"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/emptystar"
-                android:padding="-1dp"
-                android:scaleType="fitCenter"
-                android:background="#00ff"
-                app:srcCompat="@drawable/empty_star" />
-
-            <ImageButton
-                android:id="@+id/star3"
-                android:layout_width="@dimen/star_width"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/emptystar"
-                android:background="#00ff"
-                app:srcCompat="@drawable/empty_star" />
-
-            <ImageButton
-                android:id="@+id/star4"
-                android:layout_width="@dimen/star_width"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/emptystar"
-                android:background="#00ff"
-                app:srcCompat="@drawable/empty_star" />
-
-            <ImageButton
-                android:id="@+id/star5"
-                android:layout_width="@dimen/star_width"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/emptystar"
-                android:background="#00ff"
-                app:srcCompat="@drawable/empty_star" />
-        </LinearLayout>
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="#BDC3E6"
+            android:backgroundTintMode="src_in"
+            android:contentDescription="save"
+            android:fontFamily="@font/baloo_da"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="save"
+            android:textColor="#1B1A1A"
+            android:textSize="14sp" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
