Update activitiy_rating save_button
This commit adds sleep rating activity layout.
resolves #3

--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -75,11 +75,11 @@
             android:layout_marginTop="30dp"
             android:backgroundTint="#BDC3E6"
             android:backgroundTintMode="src_in"
-            android:contentDescription="save"
+            android:contentDescription="@string/save"
             android:fontFamily="@font/baloo_da"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="save"
+            android:text="@string/save"
             android:textColor="#1B1A1A"
             android:textSize="14sp" />
 
