Update Alarm with sound and vibrator
Resolves #8

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -49,7 +49,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/stop_btn"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_margin="10dp"
