Add EqualizerView draws a curve based on user touch

--- a/app/src/main/res/layout/activity_white_noise.xml
+++ b/app/src/main/res/layout/activity_white_noise.xml
@@ -15,12 +15,9 @@
 
         <cau.dururung.dururung.EqualizerView
             style="@style/Widget.Theme.Dururung.MyView"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="300dp"
             android:paddingLeft="20dp"
-            android:paddingBottom="40dp"
-            app:exampleDimension="24sp"
-            app:exampleDrawable="@android:drawable/ic_menu_add"
-            app:exampleString="Hello, EqualizerView" />
+            android:paddingBottom="40dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
