--- a/app/src/main/res/layout/activity_white_noise.xml
+++ b/app/src/main/res/layout/activity_white_noise.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:paddingLeft="20dp"
-            android:paddingBottom="40dp" />
+            android:paddingBottom="40dp"
+            android:id="@+id/equalizerView"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
